force-app/main/default/objects/HIPAACompliance__c/HIPAACompliance__c.object-meta.xml
<CustomObject>
    <label>HIPAA Compliance</label>
    <nameField>
        <displayFormat>HC-{00000}</displayFormat>
        <label>Compliance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HIPAA Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>