force-app/main/default/objects/HIPAACompliance__c/fields/Acknowledgment_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Signed_Date__c</fullName>
    <description>The date the contact e-signed the HIPAA acknowledgment and privacy consent form.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgment Signed Date</label>
    <type>Date</type>
</CustomField>