force-app/main/default/objects/HIPAACompliance__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The candidate for whom this compliance record is being tracked.</description>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>HIPAA Compliance</relationshipLabel>
    <relationshipName>HIPAACompliance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>