force-app/main/default/objects/HIPAACompliance__c/fields/Compliance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Expiry_Date__c</fullName>
    <description>The date this compliance certification expires and requires renewal.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Compliance Expiry Date</label>
    <type>Date</type>
</CustomField>