force-app/main/default/objects/HIPAACompliance__c/fields/HIPAA_Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Training_Completed_Date__c</fullName>
    <description>The date the contact completed their required HIPAA training.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HIPAA Training Completed Date</label>
    <type>Date</type>
</CustomField>