force-app/main/default/objects/HIPAACompliance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The overall status of the HIPAA compliance process for this contact.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Awaiting Training Completion</fullName>
            </value>
            <value>
                <fullName>Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Missing Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>